# pipes-and-filters

./: .gitignore  README.md  pyproject.toml
examples/: flow_example.py  pipe_example.py  pipeline_example.py  splitter_example.py
pipes_and_filters/: __init__.py  flow.py  pipeline.py
pipes_and_filters/pipes/: __init__.py  pipe.py  splitter.py
tests/: test_pipes.py  test_utils.py
