[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipes-and-filters"
version = "0.2.0"
description = "Python package for functions that simplify the implementation of pipes and filters architecture design"
readme = "README.md"
requires-python = ">=3.7"

authors = [
  { name = "Oleg Dudnik", email = "Oleggelo86@gmail.com" }
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "build"
]
